fixed alignment issue
fixed alignment issue

--- a/src/app/shared/behavioural-pdf-report-download/behavioural-pdf-report-download.component.scss
+++ b/src/app/shared/behavioural-pdf-report-download/behavioural-pdf-report-download.component.scss
@@ -563,9 +563,10 @@ td {
             font-weight: 400;
             line-height: 21px;
             span {
-                // text-transform: uppercase;
-                font-weight: 700;
-                color: #000000;
+              font-weight: 700;
+              color: #000000;
+              position: relative;
+              left: 7px;
             }
             .skillsDetail {
               text-align: left;
@@ -1018,7 +1019,7 @@ span {
                 content: '';
                 background-image: linear-gradient(to right, #23bbee, #00bed9, #00beb4, #00ba85, #5ab253);
                 position: absolute;
-                width: 100%;
+                width: 140%;
                 height: 7px;
                 left: 0;
                 bottom: 0;
@@ -1136,7 +1137,7 @@ span {
         overflow: hidden;
         height: 104%;
         display: flex;
-        height: 65px;
+        height: 50px;
         position: relative;
         right: 15px;
 
@@ -1163,6 +1164,9 @@ span {
               font-size: 15px;
               font-weight: 700;
               color: $blackColor;
+              position: relative;
+              top: 5px;
+              left: 10px;
             }
 
             .score-content::before {
@@ -1205,7 +1209,7 @@ span {
         z-index: -1;
       }
       .responsebiasprofile{
-        margin-top: 50px;
+        margin-top: 35px;
         .heading3 {
           font-size: 20px;
           font-weight: 700;
@@ -1219,7 +1223,7 @@ span {
         margin-top: 10px;
         font-size: 16px;
         font-weight: 500;
-        line-height: 25px;
+        line-height: 20px;
       }
       .boldtext{
         font-weight: 700;
